objects/MyFSFilter__c.object
<CustomObject>
    <description>MyFieldServices User filter settings</description>
    <fields>
        <fullName>CommissioningDateInstallDate__c</fullName>
        <label>Commissioning Date / Install Date *</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Connected__c</fullName>
        <label>Connected</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>On Premise</fullName>
                </value>
                <value>
                    <fullName>Not Connected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <label>Field</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Device Type</fullName>
                </value>
                <value>
                    <fullName>Range</fullName>
                </value>
                <value>
                    <fullName>Brand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthStatus__c</fullName>
        <label>Health Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HealthStatusOk</fullName>
                </value>
                <value>
                    <fullName>HealthStatusMiddle</fullName>
                </value>
                <value>
                    <fullName>HealthStatusNotOk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LifeCycleStatusOfTheInstalledProduct__c</fullName>
        <label>Lifecycle Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SCRAPPED</fullName>
                </value>
                <value>
                    <fullName>SUPPLY_CHAIN</fullName>
                </value>
                <value>
                    <fullName>NOT_USED</fullName>
                </value>
                <value>
                    <fullName>IN_USE</fullName>
                </value>
                <value>
                    <fullName>REMOVED</fullName>
                </value>
                <value>
                    <fullName>LOST</fullName>
                </value>
                <value>
                    <fullName>SWAPPED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>BFOFS-3284</description>
        <label>Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>MyFSFilters</relationshipLabel>
        <relationshipName>MyFSFilters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductType__c</fullName>
        <label>Product Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cooling</fullName>
                </value>
                <value>
                    <fullName>Battery</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Power</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remote_System__c</fullName>
        <label>Remote System</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AOS</fullName>
                </value>
                <value>
                    <fullName>RMS</fullName>
                </value>
                <value>
                    <fullName>BMS</fullName>
                </value>
                <value>
                    <fullName>EAAIT_AA</fullName>
                    <label>EcoStruxure AA</label>
                </value>
                <value>
                    <fullName>EAAIT_APP</fullName>
                    <label>EcoStruxure IT APP</label>
                </value>
                <value>
                    <fullName>EAAIT_ITE</fullName>
                    <label>EcoStruxure ITE</label>
                </value>
                <value>
                    <fullName>EAAIT_ITE_AA</fullName>
                    <label>EcoStruxure ITE &amp; AA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SOQLString__c</fullName>
        <label>SOQL String</label>
        <length>25000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Serviceability__c</fullName>
        <label>Serviceability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Traceability__c</fullName>
        <label>Traceability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>BFOFS-3284</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MyFSFilters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MyFSFilter</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_IN</language>
    </listViews>
    <nameField>
        <label>MyFsFilter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MyFSFilters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>